--- a/MTB2/MTB2.csproj
+++ b/MTB2/MTB2.csproj
@@ -16,12 +16,16 @@
     <PackageReference Include="Selenium.WebDriver.MSEdgeDriver" Version="123.0.2420.65" />
     <PackageReference Include="ShellProgressBar" Version="5.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-    <PackageReference Include="System.Windows.Forms" Version="4.0.0" />
+    <!--<PackageReference Include="System.Windows.Forms" Version="4.0.0" />-->
   </ItemGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.WindowsDesktop.App.WindowsForms" />
   </ItemGroup>
+
+	<ItemGroup>
+		<TrimmerRootAssembly Include="MTB2" />
+	</ItemGroup>
 
 
   <ItemGroup>
